# nativeRAG

./: CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  Database.cpp  Database.h  Dataset.cpp  Dataset.h  Embeddings.cpp  Embeddings.h  Logger.cpp  Logger.h  ModelAdapter.cpp  ModelAdapter.h  Server.cpp  Server.h  TypeDefine.h  config.json  dataset.json  main.cpp
src/client/: app.js  index.html  style.css
unittest/: CMakeLists.txt  TestDatabase.cpp  TestDataset.cpp  TestEmbeddings.cpp  TestModelAdapter.cpp  main.cpp
